Fix: word wrapping styles

--- a/web/themes/custom/hm-public-theme/static/sass/content/_page-banner.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/content/_page-banner.scss
@@ -44,6 +44,8 @@
     }
 
     .banner--feature-occupation {
+      line-height: 100%;
+      padding-top: em(8);
       z-index: 10;
     }
 
